<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_detail_story"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="38dp"
    tools:context=".ui.story.detailstory.DetailStory">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="30dp"
        android:layout_marginTop="50dp">

        <ImageView
            android:id="@+id/img_item_photo"
            android:layout_width="300dp"
            android:layout_height="240dp"
            android:contentDescription="@string/detail_image"
            android:scaleType="centerCrop"
            android:transitionName="@string/transition_detail_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="36dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:layout_toEndOf="@id/img_item_photo"
            android:fontFamily="sans-serif-black"
            android:text="@string/story_title"
            android:textSize="18sp"
            android:transitionName="@string/transition_title_story"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_item_photo" />

        <TextView
            android:id="@+id/storyDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif"
            android:text="@string/story_description"
            android:textSize="13sp"
            android:transitionName="@string/transition_description"
            app:layout_constraintStart_toStartOf="@+id/tv_item_name"
            app:layout_constraintTop_toBottomOf="@+id/tv_item_name" />

        <TextView
            android:id="@+id/storyDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="15dp"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif"
            android:text="@string/story_date"
            android:textSize="11sp"
            android:transitionName="@string/transition_date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_item_photo" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>