<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_add_story"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.story.addstory.AddStory">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/progressIndicator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivPreview"
            android:layout_width="0dp"
            android:layout_height="320dp"
            android:layout_margin="36dp"
            android:layout_marginTop="96dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.777"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_place_holder" />

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/materialSwitch"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:checked="false"
            android:scaleX="0.6"
            android:scaleY="0.6"
            android:text="@string/input_location"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/btnCamera"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivPreview"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/btnGallery"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="12dp"
            android:layout_marginEnd="20dp"
            android:text="@string/from_gallery"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnCamera"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/btnUpload"
            app:layout_constraintTop_toBottomOf="@+id/ivPreview" />

        <Button
            android:id="@+id/btnCamera"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/from_camera"
            app:layout_constraintEnd_toEndOf="@+id/btnUpload"
            app:layout_constraintStart_toEndOf="@+id/btnGallery"
            app:layout_constraintTop_toTopOf="@+id/btnGallery" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edtDescriptionLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="36dp"
            android:layout_marginVertical="24dp"
            android:hint="@string/story_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnGallery">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="top"
                android:inputType="textMultiLine"
                android:minLines="5"
                tools:ignore="SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnUpload"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="36dp"
            android:layout_marginVertical="24dp"
            android:text="@string/btn_upload"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtDescriptionLayout" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>