<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginHorizontal="10dp"
    android:layout_marginBottom="10dp"
    card_view:cardElevation="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <ImageView
            android:id="@+id/storyImage"
            android:layout_width="wrap_content"
            android:layout_height="160dp"
            android:layout_marginTop="8dp"
            android:scaleType="centerCrop"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tvStoryTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="12dp"
            android:layout_toEndOf="@id/storyImage"
            android:fontFamily="sans-serif-condensed-medium"
            android:maxLines="1"
            android:text="@string/story_title"
            android:textSize="18sp"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/storyImage" />

        <TextView
            android:id="@+id/storyDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif"
            android:maxLines="1"
            android:text="@string/story_description"
            android:textSize="13sp"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/tvStoryTitle" />

        <TextView
            android:id="@+id/storyDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="15dp"
            android:layout_marginTop="18dp"
            android:fontFamily="sans-serif"
            android:text="@string/story_date"
            android:textSize="11sp"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/storyImage" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    
</androidx.cardview.widget.CardView>