<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.register.Register">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineTopHorizontal"
                android:layout_width="wrap_content"
                android:layout_height="64dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintGuide_percent="0.0"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageView
                android:id="@+id/imageRegister"
                android:layout_width="0dp"
                android:layout_height="250dp"
                android:layout_margin="30dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="24dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guidelineTopHorizontal"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/register" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineBottomHorizontal"
                android:layout_width="wrap_content"
                android:layout_height="64dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintGuide_percent="0.44"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="32dp"
                android:gravity="center"
                android:text="@string/register_subtitle"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageRegister" />

            <TextView
                android:id="@+id/tvLabelUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="24dp"
                android:text="@string/username"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edtUsernameLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:hint="@string/username"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvLabelUsername"
                app:startIconDrawable="@drawable/ic_baseline_person_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtRegisterUsername"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:ems="10"
                    android:inputType="text"
                    android:paddingStart="48dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tvLabelEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="24dp"
                android:text="@string/email"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edtUsernameLayout" />

           <com.google.android.material.textfield.TextInputLayout
               android:id="@+id/edtEmailLayout"
               style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:layout_marginStart="32dp"
               android:layout_marginEnd="32dp"
               android:hint="@string/email"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toBottomOf="@+id/tvLabelEmail"
               app:startIconDrawable="@drawable/ic_baseline_email_24">

               <com.example.storyapp.customview.CustomFieldEmail
                   android:id="@+id/edtRegisterEmail"
                   android:layout_width="match_parent"
                   android:layout_height="55dp"
                   android:ems="10"
                   android:inputType="textEmailAddress"
                   android:paddingStart="48dp"/>

           </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tvLabelPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="20dp"
                android:text="@string/password"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edtEmailLayout" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edtPasswordLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:hint="@string/password"
                app:endIconMode="password_toggle"
                app:errorEnabled="true"
                app:hintAnimationEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvLabelPassword"
                app:startIconDrawable="@drawable/ic_baseline_lock_24">

                <com.example.storyapp.customview.CustomFieldPassword
                    android:id="@+id/edtRegisterPassword"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:paddingStart="48dp"
                    android:ems="10"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/btnRegister"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="32dp"
                android:text="@string/btn_register"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edtPasswordLayout" />
        </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>